# steering-functions

./: .blob_payload.json  .gitattributes  .gitignore  .local_file_b64.txt  =2.13.6  CMakeLists.txt  Cargo.toml  README.md  build.sh  build_python.sh  pyproject.toml  setup.py
.github/agents/: branch-and-commit.agent.md
.github/workflows/: ci.yml
cpp_refactor/: CMakeLists.txt  build.sh
cpp_refactor/include/steering_refactor/: angle_utils.hpp
cpp_refactor/src/: angle_utils.cpp
cpp_refactor/tests/: angle_utils_test.cpp
include/steering_state/: state.h
python/: README.md  demo_interactive.py  pyproject.toml
python/steering_functions/: __init__.py  base.py  base_state_space.py  cc_dubins_state_space.py  cc_reeds_shepp_state_space.py  core.py  dubins.py  dubins_state_space.py  hc_cc_circle.py  hc_reeds_shepp_state_space.py  paths.py  planners.py  reeds_shepp.py  reeds_shepp_state_space.py  state.py  steering_path.py  types.py  utilities.py
python/steering_functions.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python_bindings/: module.cpp
python_rewrite/: README.md  pyproject.toml  visualize.py
python_rewrite/steering_functions/: __init__.py  _helpers.py  cc_dubins_state_space.py  cc_reeds_shepp_state_space.py  configuration.py  dubins_state_space.py  hc_cc_circle.py  hc_cc_state_space.py  hc_reeds_shepp_state_space.py  paths.py  reeds_shepp_state_space.py  state.py  steering_path.py  utilities.py
python_rewrite/tests/: test_cpp_consistency.py  test_data.json  test_dubins_near_states.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/python/steering_functions_rust/: __init__.py  visualize.py
rust/src/: base_state_space.rs  cc_dubins.rs  cc_reeds_shepp.rs  configuration.rs  dubins.rs  dubins_state_space.rs  hc_cc_circle.rs  hc_cc_state_space.rs  hc_reeds_shepp.rs  lib.rs  main.rs  paths.rs  python_bindings.rs  reeds_shepp.rs  reeds_shepp_state_space.rs  state.rs  steering_path.rs  utilities.rs
rust/src/hc_cc_state_space/: configuration.rs  hc_cc_circle.rs  hc_cc_state_space.rs  mod.rs  paths.rs
rust/steering_functions/: Cargo.toml
rust/steering_functions/src/: dubins_state_space.rs  ekf.rs  hc_cc_state_space.rs  lib.rs  reeds_shepp_state_space.rs  steering_functions.rs  utilities.rs
rust/steering_functions/tests/: migration_surface_test.rs
rust/tests/: hc_reeds_shepp_regression.rs
rust_steering_functions/: Cargo.toml
scripts/: build.sh  build_python.sh  clean.sh
src/: state.h
src/python_bindings/: CMakeLists.txt  module.cpp
src/steering_functions/: CMakeLists.txt  CMakePresets.json  README.md
src/steering_functions/include/steering_functions/: all_in_one.hpp  steering_functions.hpp
src/steering_functions/include/steering_functions/cc_dubins_state_space/: cc00_dubins_state_space.hpp  cc0pm_dubins_state_space.hpp  cc_dubins_state_space.hpp  ccpm0_dubins_state_space.hpp  ccpmpm_dubins_state_space.hpp
src/steering_functions/include/steering_functions/cc_reeds_shepp_state_space/: cc00_reeds_shepp_state_space.hpp
src/steering_functions/include/steering_functions/dubins_state_space/: dubins_state_space.hpp
src/steering_functions/include/steering_functions/filter/: ekf.hpp
src/steering_functions/include/steering_functions/hc_cc_core/: configuration.hpp  hc_cc_circle.hpp  hc_cc_state_space.hpp  paths.hpp
src/steering_functions/include/steering_functions/hc_cc_state_space/: cc00_dubins_state_space.hpp  cc00_reeds_shepp_state_space.hpp  cc0pm_dubins_state_space.hpp  cc_dubins_state_space.hpp  ccpm0_dubins_state_space.hpp  ccpmpm_dubins_state_space.hpp  configuration.hpp  hc00_reeds_shepp_state_space.hpp  hc0pm_reeds_shepp_state_space.hpp  hc_cc_circle.hpp  hc_cc_path_helpers.hpp  hc_cc_state_space.hpp  hc_reeds_shepp_state_space.hpp  hcpm0_reeds_shepp_state_space.hpp  hcpmpm_reeds_shepp_state_space.hpp  paths.hpp
src/steering_functions/include/steering_functions/hc_reeds_shepp_state_space/: hc00_reeds_shepp_state_space.hpp  hc0pm_reeds_shepp_state_space.hpp  hc_reeds_shepp_state_space.hpp  hcpm0_reeds_shepp_state_space.hpp  hcpmpm_reeds_shepp_state_space.hpp
src/steering_functions/include/steering_functions/reeds_shepp_state_space/: reeds_shepp_state_space.hpp
src/steering_functions/include/steering_functions/utilities/: utilities.hpp
src/steering_functions/src/: base_state_space.cpp  steering_functions_node.cpp
src/steering_functions/src/cc_dubins_state_space/: cc00_dubins_state_space.cpp  cc0pm_dubins_state_space.cpp  cc_dubins_state_space.cpp  ccpm0_dubins_state_space.cpp  ccpmpm_dubins_state_space.cpp
src/steering_functions/src/cc_reeds_shepp_state_space/: cc00_reeds_shepp_state_space.cpp
src/steering_functions/src/dubins_state_space/: dubins_state_space.cpp
src/steering_functions/src/filter/: ekf.cpp
src/steering_functions/src/hc_cc_core/: configuration.cpp  hc_cc_circle.cpp  hc_cc_state_space.cpp  paths.cpp
src/steering_functions/src/hc_cc_state_space/: cc00_dubins_state_space.cpp  cc00_reeds_shepp_state_space.cpp  cc0pm_dubins_state_space.cpp  cc_dubins_state_space.cpp  ccpm0_dubins_state_space.cpp  ccpmpm_dubins_state_space.cpp  configuration.cpp  hc00_reeds_shepp_state_space.cpp  hc0pm_reeds_shepp_state_space.cpp  hc_cc_circle.cpp  hc_cc_state_space.cpp  hc_reeds_shepp_state_space.cpp  hcpm0_reeds_shepp_state_space.cpp  hcpmpm_reeds_shepp_state_space.cpp  paths.cpp
src/steering_functions/src/hc_reeds_shepp_state_space/: hc00_reeds_shepp_state_space.cpp  hc0pm_reeds_shepp_state_space.cpp  hc_reeds_shepp_state_space.cpp  hcpm0_reeds_shepp_state_space.cpp  hcpmpm_reeds_shepp_state_space.cpp
src/steering_functions/src/reeds_shepp_state_space/: reeds_shepp_state_space.cpp
src/steering_functions/src/utilities/: utilities.cpp
src/steering_functions/test/: fresnel_test.cpp  generate_test_data.cpp  hc_cc_circle_test.cpp  jacobian_test.cpp  steering_functions_test.cpp  timing_test.cpp
src/steering_path_lib/: CMakeLists.txt
src/steering_path_lib/include/steering_path_lib/: path_integrator.h  steering_path.h
src/steering_path_lib/src/: path_integrator.cpp  steering_path.cpp
web/: README.md  index.html
(+16 files in other folders)
