[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steering-functions"
version = "0.1.0"
description = "Steering functions for car-like robots (Python port)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
dependencies = [
	"matplotlib",
	"numpy",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
